added-helix-chat